--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,13 @@
     "@popperjs/core": "^2.11.8",
     "@tabler/icons-react": "^3.35.0",
     "bootstrap": "^5.3.8",
+    "i18next": "^25.6.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-i18next": "^16.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
