--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.5.0"
+  },
+  "dependencies": {
+    "fastify": "^5.6.2"
   }
 }
