--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "globals": "^16.5.0"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "pg": "^8.16.3"
