--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - postgres-data:/var/lib/postgresql/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U link -d securelog"]
+      test: ["CMD-SHELL", "pg_isready -U link -d postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
